added some configs for laptop use

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,9 +24,11 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
 #monitor = ,preferred,auto,auto
+monitor = eDP-1, 1920x1080@144, 1920x0 , 1
+monitor = HDMI-A-1, 1024x768@60, 0x0, 1
 # Main Monitor, Portrait
-monitor = DP-1, 1920x1080@144, 1080x715, 1
-monitor = HDMI-A-1, 2560x1080@74.99Hz, 0x0, 1, transform, 3  
+#monitor = DP-1, 1920x1080@144, 1080x715, 1
+#monitor = HDMI-A-1, 2560x1080@74.99Hz, 0x0, 1, transform, 3  
 
 ###################
 ### MY PROGRAMS ###
@@ -202,8 +204,8 @@ device {
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+$shiftMod = SUPER_SHIFT
+# Actions
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
@@ -272,7 +274,7 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Waybar Binds
-bind = $mainMod, N, exec, ./.config/waybar/scripts/launch.sh
+bind = $mainMod, N, exec, ~/.config/waybar/scripts/launch.sh
 bind = $mainMod CTRL, K,  exec, killall -SIGUSR2 waybar
 # HYPRSHOT
 
@@ -281,7 +283,7 @@ bind = $mainMod, PRINT, exec, hyprshot -m window
 # Screenshot a monitor
 bind = , PRINT, exec, hyprshot -m output
 # Screenshot a region
-bind = $ctrlMod, PRINT, exec, hyprshot -m region
+bind = $shiftMod, PRINT, exec, hyprshot -m region
 # Laptop Specific Configs
 bind = $mainMod CTRL, F5, exec, asusctl profile -n
 bind = $mainMod CTRL, P, exec, asusctl profile -P Performance
