--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,6 +1,17 @@
 # See: /usr/share/doc/mpd/mpdconf.example
-
-pid_file "/run/mpd/mpd.pid"
-db_file "/var/lib/mpd/mpd.db"
-state_file "/var/lib/mpd/mpdstate"
+bind_to_address "localhost"
+#pid_file "/run/mpd/mpd.pid"
+music_directory ="~/Music"
+db_file "~/.config/mpd/database"
 playlist_directory "/var/lib/mpd/playlists"
+
+audio_output {
+        type            "pulse"
+        name            "pulse audio"
+}
+audio_output {
+    type                    "fifo"
+    name                    "my_fifo"
+    path                    "/tmp/mpd.fifo"
+    format                  "44100:16:2"
+}
