--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,6 +24,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
 #monitor = ,preferred,auto,auto
+# Laptop Monitors Config
 monitor = eDP-1, 1920x1080@144, 1920x0 , 1
 monitor = HDMI-A-1, 1024x768@60, 0x0, 1
 # Main Monitor, Portrait
@@ -54,7 +55,7 @@ $menu = wofi --show drun
 exec-once = killall -SIGUSR2 waybar
 exec-once = hyprpaper & waybar
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = swaync
+#exec-once = swaync
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -86,8 +87,8 @@ general {
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(ff0000ee) 
-    col.inactive_border = rgba(ff000066)
-
+    #col.inactive_border = rgba(ff000066)
+    col.inactive_border = gradient rgba(ff0000ee) rgba(800000ee) 45deg
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true 
 
@@ -211,7 +212,8 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, XDG_CURRENT_DESKTOP=kde $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, R, exec, wofi --show drun
+bind = $shiftMod, R, exec, wofi --show run 
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen # Does exactly what you think it does :)
