--- a/.config/alacritty/themes/siva.toml
+++ b/.config/alacritty/themes/siva.toml
@@ -5,10 +5,10 @@ foreground = '#d9d9d9'
 
 [colors.normal]
 black   = '#330006'
-red     = '#b36666'
+red     = '#df0000'
 green   = '#b70000'
 yellow  = '#ce2029'
-blue    = '#df0000'
+blue    = '#b36666' #df0000
 magenta = '#900000'
 cyan    = '#8a2c2c'
 white   = '#d9d9d9'
@@ -16,10 +16,10 @@ white   = '#d9d9d9'
 # Bright colors
 [colors.bright]
 black   = '#996666'
-red     = '#b36666'
+red     = '#ff6666'
 green   = '#e06666'
 yellow  = '#f08080'
-blue    = '#ff6666'
+blue    = '#b36666' #ff6666
 magenta = '#cc6666'
 cyan    = '#ea5454'
 white   = '#d9d9d9'
