--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,14 +1,15 @@
 # See: /usr/share/doc/mpd/mpdconf.example
 bind_to_address "localhost"
 #pid_file "/run/mpd/mpd.pid"
-music_directory ="~/Music"
+music_directory "~/Music"
 db_file "~/.config/mpd/database"
 playlist_directory "/var/lib/mpd/playlists"
 
 audio_output {
-        type            "pulse"
-        name            "pulse audio"
+        type            "pipewire"
+        name            "PipeWire Sound Server"
 }
+
 audio_output {
     type                    "fifo"
     name                    "my_fifo"
