Fixed stupid qt6ct themeing using kvantum

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -72,6 +72,7 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = GDK_BACKEND,wayland,x11,*
+env = QT_STYLE_OVERRIDE=kvantum
 #####################
 ### LOOK AND FEEL ###
 #####################
