changed audio mixer to pwvucontrol, moved tray icon on laptop

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -52,13 +52,13 @@
     ],
     "modules-left": [
         "hyprland/workspaces",
-        "mpd",
-	    "tray"
+        "mpd"
     ],
     "modules-center": [
         "custom/media"
     ],
     "modules-right": [
+        "tray",
         "pulseaudio",
         "network",
 	    "bluetooth",
