pushing lots of changes to the repo

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -160,10 +160,6 @@ master {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
-misc {
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
-}
 
 
 #############
@@ -210,7 +206,7 @@ $shiftMod = SUPER_SHIFT
 # Actions
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
+#bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, XDG_CURRENT_DESKTOP=kde $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, wofi --show drun
@@ -275,7 +271,9 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
-
+bind = $shiftMod, right, exec, playerctl next
+bind = $shiftMod, left, exec, playerctl previous 
+bind = $shiftMod, P, exec, playerctl play-pause 
 # Waybar Binds
 bind = $mainMod, N, exec, ~/.config/waybar/scripts/launch.sh
 bind = $mainMod CTRL, K,  exec, killall -SIGUSR2 waybar
