--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,9 +1,9 @@
 # See: /usr/share/doc/mpd/mpdconf.example
 bind_to_address "localhost"
-#pid_file "/run/mpd/mpd.pid"
-music_directory "~/Music"
+music_directory "~/music"
 db_file "~/.config/mpd/database"
 playlist_directory "/var/lib/mpd/playlists"
+
 audio_output {
         type            "pipewire"
         name            "PipeWire Sound Server"
@@ -15,3 +15,4 @@ audio_output {
     path                    "/tmp/mpd.fifo"
     format                  "44100:16:2"
 }
+
