redid entire config using lazy.nvim

--- a/.config/alacritty/themes/siva.toml
+++ b/.config/alacritty/themes/siva.toml
@@ -8,10 +8,10 @@ black   = '#330006'
 red     = '#df0000'
 green   = '#b70000'
 yellow  = '#ce2029'
-blue    = '#b36666' #df0000
+blue    = '#b36666'
 magenta = '#900000'
 cyan    = '#8a2c2c'
-white   = '#d9d9d9'
+white   = '#B54E54'
 
 # Bright colors
 [colors.bright]
@@ -19,7 +19,7 @@ black   = '#996666'
 red     = '#ff6666'
 green   = '#e06666'
 yellow  = '#f08080'
-blue    = '#b36666' #ff6666
+blue    = '#CC7A7A' 
 magenta = '#cc6666'
 cyan    = '#ea5454'
-white   = '#d9d9d9'
+white   = '#ce2029'
